support for aws ingress and watcher workers
note we cannot use any of the native conductor operations as they never move to complete in a reasonable time frame.

parallelization fails as joins also never complete.